// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Picture picture-border="..." /> props picture-border 1`] = `
<picture
  className="ek-picture ek-picture_border_THEME_NAME"
/>
`;

exports[`<Picture picture-border="..." /> props picture-border-bottom 1`] = `
<picture
  className="ek-picture ek-picture_border-bottom_THEME_NAME"
/>
`;

exports[`<Picture picture-border="..." /> props picture-border-left 1`] = `
<picture
  className="ek-picture ek-picture_border-left_THEME_NAME"
/>
`;

exports[`<Picture picture-border="..." /> props picture-border-lr 1`] = `
<picture
  className="ek-picture ek-picture_border-lr_THEME_NAME"
/>
`;

exports[`<Picture picture-border="..." /> props picture-border-right 1`] = `
<picture
  className="ek-picture ek-picture_border-right_THEME_NAME"
/>
`;

exports[`<Picture picture-border="..." /> props picture-border-tb 1`] = `
<picture
  className="ek-picture ek-picture_border-tb_THEME_NAME"
/>
`;

exports[`<Picture picture-border="..." /> props picture-border-top 1`] = `
<picture
  className="ek-picture ek-picture_border-top_THEME_NAME"
/>
`;
